<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/padding_login_screen"
    android:background="@android:color/white"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/l_login_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_2" />

            <com.ciao.app.views.customviews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/txt_welcome"
                android:textSize="@dimen/ts_welcome_txt"
                android:paddingTop="@dimen/padding_txt_welcome"
                android:textColor="@color/color_txt"/>

            <com.ciao.app.views.customviews.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/txt_please_login"
                android:textSize="@dimen/ts_please_login_txt"
                android:paddingBottom="@dimen/padding_txt_please_login"
                android:textColor="@color/color_txt"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/l_login_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_user_id"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/m_login_text_box"
            android:layout_marginBottom="@dimen/m_login_text_box"
            android:imeOptions="actionNext"
            android:hint="@string/hint_user_name"
            android:textColor="@color/color_txt_gray"
            android:inputType="textEmailAddress" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/et_user_password"
            android:layout_gravity="center_horizontal"
            android:imeOptions="actionDone"
            android:hint="@string/hint_password"
            android:textColor="@color/color_txt_gray"/>

        <com.ciao.app.views.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_forgot_password"
            android:layout_marginBottom="@dimen/m_login_text_box"
            android:textColor="@color/color_txt"
            android:textSize="@dimen/dimen_short_desc"
            android:id="@+id/tv_forgot_password"
            android:onClick="gotToForgotPasswordScreen"
            android:clickable="true"
            app:fontName="italic"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_login_button"
            android:id="@+id/btn_login"
            android:background="@drawable/selector_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/ts_btn_txt"
            android:onClick="login"/>
    </LinearLayout>


</ScrollView>