<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:paddingLeft="@dimen/padding_login_screen"
    android:paddingRight="@dimen/padding_login_screen"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <com.ciao.app.views.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_lets_start"
            android:textColor="@color/color_txt"
            android:textSize="@dimen/ts_welcome_txt"
            android:textStyle="bold" />

        <com.ciao.app.views.customviews.circularimageview.CircularImageView
            android:id="@+id/civ_person_image"
            android:layout_width="@dimen/dimen_sign_up_profile_pic"
            android:layout_height="@dimen/dimen_sign_up_profile_pic"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/padding_splash_app_logo"
            android:clickable="true"
            android:src="@drawable/user_avtar"
            app:civ_border="true"
            app:civ_border_color="@color/color_app_header"
            app:civ_border_width="2dp" >
        </com.ciao.app.views.customviews.circularimageview.CircularImageView>

        <!--
            <com.facebook.widget.LoginButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"/>
        -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/selector_facebook_button"
            android:onClick="facebookLogin"
            android:padding="@dimen/p_fb_button"
            android:visibility="visible" >

            <com.ciao.app.views.customviews.CustomTextView
                android:id="@+id/tv_login_with_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/txt_autofill_with_facebook"
                android:textColor="@android:color/white"
                android:textSize="@dimen/ts_btn_txt" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingRight="@dimen/p_fb_image"
                android:src="@drawable/fb" />
        </RelativeLayout>

        <com.ciao.app.views.customviews.CustomTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/p_fb_image"
            android:text="@string/txt_or"
            android:textColor="@color/color_txt_gray"
            android:visibility="visible" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/m_login_text_box"
            android:hint="@string/hint_first_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:textColor="@color/color_txt_gray" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/m_login_text_box"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/color_txt_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/m_login_text_box"
            android:orientation="horizontal"
            android:weightSum="1" >

            <EditText
                android:id="@+id/et_dob"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/hint_dob"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                 android:textColor="@color/color_txt_gray"/>

            <Spinner
                android:id="@+id/sp_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:entries="@array/gender_array"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:prompt="@string/hint_gender" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1" >

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:textColor="@color/color_txt_gray" />

            <EditText
                android:id="@+id/et_referal_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:hint="@string/hint_referral_code"
                android:imeOptions="actionDone"
                android:visibility="gone"
                android:inputType="phone" 
                android:textColor="@color/color_txt_gray"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/m_login_text_box"
            android:orientation="horizontal"
            android:weightSum="1" >

            <com.ciao.app.views.customviews.CustomTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txt_minimum_password_length"
                android:textSize="@dimen/dimen_short_desc"
                app:fontName="italic"
                android:textColor="@color/color_txt_gray" />

            <com.ciao.app.views.customviews.CustomTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="0"
                android:gravity="right"
                android:text="@string/txt_optional"
                android:visibility="gone"
                android:textSize="@dimen/dimen_short_desc"
                app:fontName="italic"
                android:textColor="@color/color_txt_gray" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button"
            android:onClick="goToNextScreen"
            android:text="Next"
            android:textColor="@android:color/white"
            android:textSize="@dimen/ts_btn_txt"
            android:layout_marginBottom="10dp" />
    </LinearLayout>

</ScrollView>