<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/ll_app_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_app_header"
        android:layout_alignParentTop="true"
        android:background="@color/color_app_header"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_back_from_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="goToPreviousScreen"
            android:padding="@dimen/padding_app_header"
            android:src="@drawable/back" />

        <com.ciao.app.views.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/iv_back_from_change_password"
            android:layout_toRightOf="@+id/iv_back_from_change_password"
            android:text="@string/txt_change_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/ts_screen_header_title" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/p_splash_login_sign_up"
        android:paddingRight="@dimen/p_splash_login_sign_up"
        android:paddingTop="@dimen/padding_change_password_top" >

        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/m_login_text_box"
            android:hint="@string/hint_old_password"
            android:inputType="textPassword"
            android:textColor="@color/color_txt_gray" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/m_login_text_box"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:textColor="@color/color_txt_gray" />

        <EditText
            android:id="@+id/et_confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/m_login_text_box"
            android:hint="@string/hint_confirm_new_password"
            android:inputType="textPassword"
            android:textColor="@color/color_txt_gray" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_button"
            android:onClick="changePassword"
            android:text="@string/txt_submit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/ts_btn_txt" />
    </LinearLayout>

</LinearLayout>