<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/ll_app_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_app_header"
        android:layout_alignParentTop="true"
        android:background="@color/color_app_header"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_back_from_change_ciao_number"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/back"
            android:padding="@dimen/padding_app_header"
            android:onClick="goToPreviousScreen"/>

        <com.ciao.app.views.customviews.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_forgot_password_header"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_back_from_change_ciao_number"
            android:layout_toEndOf="@+id/iv_back_from_change_ciao_number"
            android:textSize="@dimen/ts_screen_header_title"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/padding_change_password_top"
        android:paddingRight="@dimen/p_splash_login_sign_up"
        android:paddingLeft="@dimen/p_splash_login_sign_up">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/et_user_email"
            android:layout_marginBottom="@dimen/m_login_text_box"
            android:hint="@string/hint_email"
            android:textColor="@color/color_txt_gray"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_submit"
            android:background="@drawable/selector_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/ts_btn_txt"
            android:onClick="requestNewPassword"/>

    </LinearLayout>

</LinearLayout>